--- a/gateway/package.json
+++ b/gateway/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "nodemon --use_strict -r dotenv/config index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "script/build.sh"
+    "build": "script/build.sh",
+    "patch": "script/patch.sh",
+    "update": "npm run build && npm run patch"
   },
   "dependencies": {
     "axios": "^0.18.0",
