--- a/k8s/front-end-deployment.yml
+++ b/k8s/front-end-deployment.yml
@@ -14,5 +14,5 @@ spec:
         app: front-end
     spec:
       containers:
-      - image: rs-ms/geatway:v1
+      - image: rs-ms/front-end:v1
         name: front-end
