add necessary front-end files

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "lodash": "^4.17.5",
-    "material-ui": "1.0.0-beta.4",
-    "material-ui-icons": "1.0.0-beta.35",
-    "material-ui-search-bar": "1.0.0-beta.4",
+    "material-ui": "^1.0.0-beta.4",
+    "material-ui-icons": "^1.0.0-beta.35",
+    "material-ui-search-bar": "^1.0.0-beta.4",
     "now-purge": "0.0.15",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -23,10 +23,7 @@
     "eject": "react-scripts eject",
     "now-start": "serve build --single --cache 0",
     "deploy": "git add -A && git commit -m 'add code' && git push origin master && now && now alias",
-    "purge-deployments": "now-purge -n generic-concrete-salad",
-    "docker-build": "script/build.sh",
-    "patch": "script/patch.sh",
-    "update": "npm run build && npm run patch"
+    "purge-deployments": "now-purge -n generic-concrete-salad"
   },
   "now": {
     "alias": "generic-concrete-salad"
