add kube scripts

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,7 +23,10 @@
     "eject": "react-scripts eject",
     "now-start": "serve build --single --cache 0",
     "deploy": "git add -A && git commit -m 'add code' && git push origin master && now && now alias",
-    "purge-deployments": "now-purge -n generic-concrete-salad"
+    "purge-deployments": "now-purge -n generic-concrete-salad",
+    "docker-build": "script/build.sh",
+    "patch": "script/patch.sh",
+    "update": "npm run build && npm run patch"
   },
   "now": {
     "alias": "generic-concrete-salad"
