--- a/front-end/nginx.conf
+++ b/front-end/nginx.conf
@@ -9,7 +9,7 @@ http {
 
         location / {
             root   www;
-            try_files $uri $uri/ index.html;;
+            try_files $uri $uri/ index.html;    
         }
     }
 
