fix typo and add more information to readme

--- a/k8s/gateway-deployment.yml
+++ b/k8s/gateway-deployment.yml
@@ -14,5 +14,5 @@ spec:
         app: gateway
     spec:
       containers:
-      - image: rs-ms/geatway:v1
+      - image: rs-ms/gateway:v1
         name: gateway
