--- a/user/k8s/user-secret.yml
+++ b/user/k8s/user-secret.yml
@@ -7,5 +7,5 @@ data:
   db_password: cm9vdA==
   db_database: dGVzdC11c2Vycy1kYg==
   db_host: MTAuMC4yLjE1
-  db_port: MzAwMQ==
+  db_port: NTQzMg==
   token_secret: dGhpcy1pcy1teS1zZWNyZXQ=
