--- a/front-end/nginx.conf
+++ b/front-end/nginx.conf
@@ -1,15 +1,17 @@
+events { }
+
 http {
     include       mime.types;
     sendfile        on;
     gzip  on;
 
     server {
+        root   /usr/share/nginx/www;
         listen       3000;
         server_name  localhost;
-
+        index index.html index.html;
         location / {
-            root   www;
-            try_files $uri $uri/ index.html;    
+          try_files $uri /index.html;
         }
     }
 
