--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,12 +2,13 @@
   "name": "generic-concrete-salad",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://mywebsite.com/",
   "dependencies": {
     "axios": "^0.18.0",
     "lodash": "^4.17.5",
     "material-ui": "^1.0.0-beta.4",
     "material-ui-icons": "^1.0.0-beta.35",
-    "material-ui-search-bar": "^1.0.0-beta.4",
+    "material-ui-search-bar": "1.0.0-beta.4",
     "now-purge": "0.0.15",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
