--- a/product/k8s/product-secret.yml
+++ b/product/k8s/product-secret.yml
@@ -7,4 +7,5 @@ data:
   db_password: cm9vdA==
   db_database: dGVzdC1wcm9kdWN0cy1kYg==
   db_host: MTAuMC4yLjE1
-  db_port: MzAwMg==
+  db_port: NTQzMg==
+
