--- a/front-end/k8s/front-end-service.yml
+++ b/front-end/k8s/front-end-service.yml
@@ -6,9 +6,9 @@ metadata:
   name: front-end
 spec:
   ports:
-  - port: 80
+  - port: 3000
     protocol: TCP
-    targetPort: 80
+    targetPort: 3000
   selector:
     app: front-end
-  type: NodePort
+  type: ClusterIP
