--- a/user/package.json
+++ b/user/package.json
@@ -10,9 +10,7 @@
     "db-migrate": "./node_modules/.bin/knex migrate:latest",
     "start": "node index.js",
     "start:dev": "NODE_ENV=development PROCESS_TYPE=web ./node_modules/.bin/nodemon ./index.js",
-    "build": "scripts/build.sh",
-    "patch": "scripts/patch.sh",
-    "update": "npm run build && npm run patch"
+    "build": "../build.sh \"user\""
   },
   "author": "",
   "license": "ISC",
