--- a/front-end/k8s/front-end-deployment.yml
+++ b/front-end/k8s/front-end-deployment.yml
@@ -14,5 +14,5 @@ spec:
         app: front-end
     spec:
       containers:
-      - image: rs-ms/front-end:v1
+      - image: rs-ms/front-end
         name: front-end
