--- a/gateway/package.json
+++ b/gateway/package.json
@@ -6,20 +6,18 @@
   "scripts": {
     "start": "nodemon --use_strict -r dotenv/config index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "script/build.sh",
-    "patch": "script/patch.sh",
-    "update": "npm run build && npm run patch"
+    "build": "../build.sh gateway"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "0.18.0",
     "cors": "2.8.4",
-    "dotenv": "^5.0.1",
-    "express": "^4.16.3",
-    "express-http-proxy": "^1.1.0",
-    "express-jwt": "^5.3.1",
-    "jsonwebtoken": "^8.2.1"
+    "dotenv": "5.0.1",
+    "express": "4.16.3",
+    "express-http-proxy": "1.1.0",
+    "express-jwt": "5.3.1",
+    "jsonwebtoken": "8.2.1"
   },
   "devDependencies": {
-    "nodemon": "^1.17.3"
+    "nodemon": "1.17.3"
   }
 }
