fix image pull policy

--- a/gateway/k8s/gateway-deployment.yml
+++ b/gateway/k8s/gateway-deployment.yml
@@ -1,5 +1,3 @@
-apiVersion: apps/v1beta2
-kind: Deployment
 metadata:
   labels:
     app: gateway
@@ -16,6 +14,7 @@ spec:
       containers:
       - image: rs-ms/gateway
         name: gateway
+        imagePullPolicy: IfNotPresent
         env:
         - name: JWT_SECRET
           valueFrom:
