--- a/user/package.json
+++ b/user/package.json
@@ -9,7 +9,7 @@
     "db-stop": "docker rm -f freebie-users-local || true",
     "db-migrate": "./node_modules/.bin/knex migrate:latest",
     "start": "node index.js",
-    "start:dev": "NODE_ENV=development PROCESS_TYPE=web ./node_modules/.bin/nodemon ./index.js",
+    "start:dev": "./node_modules/.bin/nodemon -r dotenv/config ./index.js",
     "docker-build": "../scripts/build \"user\""
   },
   "author": "",
