feat(cache): Adds caching middleware and request with cache wrapper, adds redis to docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,3 +18,8 @@ services:
       - 5433:8081
     links:
       - db
+  redis:
+    image: redis:alpine
+    restart: always
+    ports:
+      - 6379:6379
