--- a/gateway/package.json
+++ b/gateway/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --use_strict -r dotenv/config index.js",
+    "start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon -r dotenv/config ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "docker-build": "../scripts/build gateway"
   },
@@ -15,7 +16,8 @@
     "express": "4.16.3",
     "express-http-proxy": "1.1.0",
     "express-jwt": "5.3.1",
-    "jsonwebtoken": "8.2.1"
+    "jsonwebtoken": "8.2.1",
+    "redis": "2.8.0"
   },
   "devDependencies": {
     "nodemon": "1.17.3"
