--- a/gateway/package.json
+++ b/gateway/package.json
@@ -9,13 +9,15 @@
     "docker-build": "../scripts/build gateway"
   },
   "dependencies": {
-    "axios": "0.18.0",
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "cors": "2.8.4",
     "dotenv": "5.0.1",
     "express": "4.16.3",
     "express-http-proxy": "1.1.0",
     "express-jwt": "5.3.1",
-    "jsonwebtoken": "8.2.1"
+    "jsonwebtoken": "8.2.1",
+    "request": "^2.87.0"
   },
   "devDependencies": {
     "nodemon": "1.17.3"
