--- a/sidecar/package.json
+++ b/sidecar/package.json
@@ -19,7 +19,8 @@
     "koa-compose": "4.1.0",
     "koa-proxy": "0.9.0",
     "koa-router": "7.4.0",
-    "koa2-cors": "2.0.6"
+    "koa2-cors": "2.0.6",
+    "redis": "2.8.0"
   },
   "devDependencies": {
     "dotenv": "6.0.0",
