fixes and notice for windows

--- a/product/k8s/product-secret.yml
+++ b/product/k8s/product-secret.yml
@@ -6,6 +6,5 @@ data:
   db_user: cm9vdA==
   db_password: cm9vdA==
   db_database: dGVzdC1wcm9kdWN0cy1kYg==
-  db_host: MTAuMC4yLjE1
+  db_host: aG9zdC5kb2NrZXIuaW50ZXJuYWw=
   db_port: NTQzMg==
-
