--- a/user/k8s/user-secret.yml
+++ b/user/k8s/user-secret.yml
@@ -6,6 +6,6 @@ data:
   db_user: cm9vdA==
   db_password: cm9vdA==
   db_database: dGVzdC11c2Vycy1kYg==
-  db_host: MTAuMC4yLjE1
+  db_host: aG9zdC5kb2NrZXIuaW50ZXJuYWw=
   db_port: NTQzMg==
   token_secret: dGhpcy1pcy1teS1zZWNyZXQ=
